--- a/.github/workflows/atlantis-image.yml
+++ b/.github/workflows/atlantis-image.yml
@@ -16,7 +16,19 @@ on:
       - 'go.*'
       - 'yarn.lock'
       - 'package.json'
+
   workflow_dispatch:
+    inputs:
+      push_override:
+        description: Always push
+        type: boolean
+        required: false
+        default: false
+      tag_override:
+        description: Always push
+        type: string
+        required: false
+        default: ""
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -32,7 +44,8 @@ jobs:
       # Set docker repo to either the fork or the main repo where the branch exists
       DOCKER_REPO: ghcr.io/${{ github.repository }}
       # Push if not a pull request and references the main branch
-      PUSH: ${{ (github.event_name != 'pull_request') && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) }}
+      PUSH: ${{ ( github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) || github.event.inputs.push_overide ) }}
+      GITHUB_REF: ${{ github.event.inputs.tag_override != '' && 'refs/tags/${{ github.event.inputs.tag_override }}' || github.ref }}
 
     steps:
     - name: Dump GitHub context
@@ -83,13 +96,13 @@ jobs:
           # dev
           type=raw,event=push,value=dev,enable={{is_default_branch}},suffix=${{ env.SUFFIX }}
           type=raw,event=push,value=dev,enable={{is_default_branch}},suffix=${{ env.SUFFIX }}-{{ sha }}
-          type=raw,event=push,value=dev,enable=${{ github.ref == format('refs/heads/{0}', 'main') && matrix.image_type == 'alpine' }},suffix=
+          type=raw,event=push,value=dev,enable=${{ env.GITHUB_REF == format('refs/heads/{0}', 'main') && matrix.image_type == 'alpine' }},suffix=
           # prerelease
-          type=raw,event=tag,value=prerelease-latest,enable=${{ startsWith(github.ref, 'refs/tags/') && contains(github.ref, 'pre') && matrix.image_type == 'alpine' }},suffix=
-          type=raw,event=tag,value=prerelease-latest,enable=${{ startsWith(github.ref, 'refs/tags/') && contains(github.ref, 'pre') }},suffix=${{ env.SUFFIX }}
+          type=raw,event=tag,value=prerelease-latest,enable=${{ startsWith(env.GITHUB_REF, 'refs/tags/') && contains(env.GITHUB_REF, 'pre') && matrix.image_type == 'alpine' }},suffix=
+          type=raw,event=tag,value=prerelease-latest,enable=${{ startsWith(env.GITHUB_REF, 'refs/tags/') && contains(env.GITHUB_REF, 'pre') }},suffix=${{ env.SUFFIX }}
           # latest
-          type=raw,event=tag,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') && !contains(github.ref, 'pre') && matrix.image_type == 'alpine' }},suffix=
-          type=raw,event=tag,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') && !contains(github.ref, 'pre') }},suffix=${{ env.SUFFIX }}
+          type=raw,event=tag,value=latest,enable=${{ startsWith(env.GITHUB_REF, 'refs/tags/') && !contains(env.GITHUB_REF, 'pre') && matrix.image_type == 'alpine' }},suffix=
+          type=raw,event=tag,value=latest,enable=${{ startsWith(env.GITHUB_REF, 'refs/tags/') && !contains(env.GITHUB_REF, 'pre') }},suffix=${{ env.SUFFIX }}
           # pr
           type=ref,event=pr,suffix=${{ env.SUFFIX }}
         flavor: |
@@ -107,7 +120,7 @@ jobs:
     # Publish release to container registry
     - name: Populate release version
       if: contains(fromJson('["push", "pull_request"]'), github.event_name)
-      run: echo "RELEASE_VERSION=${{ startsWith(github.ref, 'refs/tags/') && '${GITHUB_REF#refs/*/}' || 'dev' }}" >> $GITHUB_ENV
+      run: echo "RELEASE_VERSION=${{ startsWith(env.GITHUB_REF, 'refs/tags/') && '${GITHUB_REF#refs/*/}' || 'dev' }}" >> $GITHUB_ENV
 
     - name: "Build ${{ env.PUSH == 'true' && 'and push' || '' }} ${{ env.DOCKER_REPO }} image"
       if: false # contains(fromJson('["push", "pull_request"]'), github.event_name)
