--- a/.github/workflows/atlantis-image.yml
+++ b/.github/workflows/atlantis-image.yml
@@ -20,12 +20,12 @@ on:
   workflow_dispatch:
     inputs:
       push_override:
-        description: Always push
+        description: Push ?
         type: boolean
         required: false
         default: false
       tag_override:
-        description: Always push
+        description: Add a v prefixed release tag
         type: string
         required: false
         default: ""
@@ -120,8 +120,8 @@ jobs:
 
     # Publish release to container registry
     - name: Populate release version
-      if: contains(fromJson('["push", "pull_request"]'), github.event_name)
-      run: echo "RELEASE_VERSION=${{ startsWith(env.GITHUB_REF, 'refs/tags/') && '${GITHUB_REF#refs/*/}' || 'dev' }}" >> $GITHUB_ENV
+      if: contains(fromJson('["push", "pull_request", "workflow_dispatch"]'), github.event_name)
+      run: echo "RELEASE_VERSION=${{ startsWith(env.GITHUBREF, 'refs/tags/') && '${GITHUB_REF#refs/*/}' || 'dev' }}" >> $GITHUB_ENV
 
     - name: "Build ${{ env.PUSH == 'true' && 'and push' || '' }} ${{ env.DOCKER_REPO }} ${{ env.RELEASE_VERSION }} image"
       if: false # contains(fromJson('["push", "pull_request"]'), github.event_name)
